@@ -1,6 +1,7 @@
 python-raven (6.0.0-2) xenial; urgency=medium
 
-  * Backport for Xenial. No changes.
+  * Backport for Xenial.
+     + Disable tests.
 
  -- Vincent Bernat <bernat@debian.org>  Tue, 28 Feb 2017 13:34:22 +0100
 
